--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -1,4 +1,6 @@
 ﻿<%@ Master Language="C#"  AutoEventWireup="true" CodeBehind="Admin.master.cs" Inherits="ShippingController_V1._0_.Forms.Master_Forms.Admin" %>
+
+<%@ Register Assembly="AjaxControlToolkit" Namespace="AjaxControlToolkit" TagPrefix="asp" %>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -9,46 +11,35 @@
     </asp:ContentPlaceHolder>
     <script src="../../Themes/js/jquery.min.js"></script>
     <script type="text/javascript" src="../../Themes/js/ddsmoothmenu.js"></script>
-    <script type="text/javascript">
-
-        ddsmoothmenu.init({
-            mainmenuid: "templatemo_menu", //menu DIV id
-            orientation: 'h', //Horizontal or vertical menu: Set to "h" or "v"
-            classname: 'ddsmoothmenu', //class added to menu's outer DIV
-            //customtheme: ["#1c5a80", "#18374a"],
-            contentsource: "markup" //"markup" or ["container_id", "path_to_menu_file"]
-        })
-
-    </script>
     
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; height: 800px; background-image: url(../../Images/main-bg.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; background-image: url(../../Images/main-bg.jpg)">
         <tr style="vertical-align:top">
             <td>
-                <div>
+                <div style="border-bottom-style: double; border-bottom-width: medium; border-bottom-color: #0099FF; background:rgba(0, 0, 0, 0.70) " >
                     <table id="tblMainHome" runat="server" style="width: 99%">
-                        <tr style="height: 50px; background: rgba(0,0,0,0.70);">
+                        <tr ">
                             <td>
-                                <table style="width: 80%; margin: 0px auto;">
+                                <table">
                                     <tr>
-                                        <td>
-                                            &nbsp;<img alt="" class="auto-style1" src="../../Images/logoKraus.png" /></td>
-                                        <td style="margin: 0px auto;">
-
-                                            <h1 style="color: #0099FF; font-family: Arial">Shipment Controller</h1>
-
+                                        <td style="width:10%">
+                                            &nbsp;<img src="../../Images/logoKraus.png" /></td>
+                                        <td style="vertical-align: bottom;">
+                                            <h1 style="color: #0099FF; font-weight: 100; font-family: 'Comic Sans MS'; text-align: left;"><span>Shipment Controller</span></h1>
                                         </td>
                                         <td>
-                                            <table style="width: 50%; float: right;">
+                                            <table style="width: 40%; float: right;">
                                                 <tr>
                                                     <td class="tdRight">
-                                                        <img src="../../Images/UserIcon.png" style="height: 29px; width: 29px" /></td>
-                                                    <td style="text-align: right; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
+                                                        <img src="../../Images/UserIcon.png" />
+                                                    </td>
+                                                    <td style="text-align: left; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
                                                         <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
+                                                        &nbsp;
                                                     </td>
                                                     <td>
-                                                        <a style="color: whitesmoke; font-size: 15px;" href="../Web%20Forms/frmLogin.aspx">Logout</a>
+                                                        &nbsp;<a style="color: whitesmoke; font-size: 15px;" href="../Web%20Forms/frmLogin.aspx">Logout</a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -60,50 +51,57 @@
                         <tr style="height: 5px">
                             <td>&nbsp</td>
                         </tr>
-                        <tr id="trBody" style="width:100%">
+                    <tr id="trBody" style="width: 100%; margin-top:15px; float: none;">
+                        <td>
+                            <div id="page" class="container1" style="width: 100%">
+                                <form id="form1" runat="server">
+                                    <div style="border-style: none groove none none; border-width: medium; border-color: #0099CC; float: left; vertical-align: top; width: 14%">
+                                        <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows" OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1">
+                                            <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
+                                            <Nodes>
+                                                <asp:TreeNode ShowCheckBox="False" Text="Home" ToolTip="Home" Value="~/Forms/Web Forms/frmHomePage.aspx"></asp:TreeNode>
+                                                <asp:TreeNode Text="Charts" ToolTip="Charts" Value="../Web Forms/frmChart.aspx"></asp:TreeNode>
+                                                <asp:TreeNode Text="Shipment" Value="~/Forms/Web Forms/frmShipmentInfoALl.aspx">
+                                                    <asp:TreeNode Text="Shipment Search" Value="~/Forms/Web Forms/frmShipmentDetailSage.aspx"></asp:TreeNode>
+                                                    <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
+                                                </asp:TreeNode>
+                                                <asp:TreeNode Text="Shipping" Value="~/Forms/Web Forms/frmShippingInfo.aspx"></asp:TreeNode>
+                                                <asp:TreeNode Text="Admin" Value="#">
+                                                    <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx"></asp:TreeNode>
+                                                    <asp:TreeNode Text="Station" Value="~/Forms/Web Forms/frmDisableStation.aspx"></asp:TreeNode>
+                                                    <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
+                                                    <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
+                                                </asp:TreeNode>
+                                                <asp:TreeNode Text="Track Shipment" Value="~/Forms/Web Forms/frmTrackShipment.aspx"></asp:TreeNode>
+                                                <asp:TreeNode Text="Stations" Value="~/Forms/Web Forms/frmStations.aspx"></asp:TreeNode>
+                                            </Nodes>
+                                            <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
+                                            <ParentNodeStyle Font-Bold="False" />
+                                            <SelectedNodeStyle Font-Underline="True" ForeColor="#0099FF" HorizontalPadding="0px" VerticalPadding="0px" />
+                                        </asp:TreeView>
+                                        <div id="dvGap" style="height:20px">
+                                        </div>
+                                        <div id="Div1">
+                                        </div>
+                                    </div>
+                                    <div style="float: right; width: 85%; ">
+                                        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                                            <asp:ScriptManager ID="ScriptManager1" runat="server">
+                                            </asp:ScriptManager>
+                                        </asp:ContentPlaceHolder>
+                                    </div>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                        <tr>
                             <td>
-                                <div id="page" class="container" style="width: 100%">
-                                    <form id="form1" runat="server">
-                                        <div style="border-style: none groove none none; border-width: medium; border-color: #0099CC; float: left; vertical-align: top ; width:14%">
-                                            <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows" OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1">
-                                                <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
-                                                <Nodes>
-                                                    <asp:TreeNode ShowCheckBox="False" Text="Home" ToolTip="Home" Value="~/Forms/Web Forms/frmHomePage.aspx"></asp:TreeNode>
-                                                    <asp:TreeNode Text="Charts" ToolTip="Charts" Value="../Web Forms/frmChart.aspx">
-                                                        
-                                                    </asp:TreeNode>
-                                                    <asp:TreeNode Text="Shipment" Value="~/Forms/Web Forms/frmShipmentInfoALl.aspx">
-                                                        <asp:TreeNode Text="Shipment Search" Value="~/Forms/Web Forms/frmShipmentDetailSage.aspx"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
-                                                    </asp:TreeNode>
-                                                    <asp:TreeNode Text="Shipping" Value="~/Forms/Web Forms/frmShippingInfo.aspx"></asp:TreeNode>
-                                                    <asp:TreeNode Text="Admin" Value="#">
-                                                        <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Station" Value="~/Forms/Web Forms/frmDisableStation.aspx"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
-                                                    </asp:TreeNode>
-                                                  <asp:TreeNode Text="Track Shipment" Value="~/Forms/Web Forms/frmTrackShipment.aspx"></asp:TreeNode>
-                                                    <asp:TreeNode Text="Stations" Value="~/Forms/Web Forms/frmStations.aspx"></asp:TreeNode>
-                                                </Nodes>
-                                                <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
-                                                <ParentNodeStyle Font-Bold="False" />
-                                                <SelectedNodeStyle Font-Underline="True" ForeColor="#0099FF" HorizontalPadding="0px" VerticalPadding="0px" />
-                                            </asp:TreeView>
-                                        </div>
-                                        <div style="float: right; width: 85%; ">
-                                            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                                                <asp:ScriptManager ID="ScriptManager1" runat="server">
-                                                </asp:ScriptManager>
-                                            </asp:ContentPlaceHolder>
-                                        </div>
-                                    </form>
-                                </div>
+
                             </td>
                         </tr>
                         <tr id="trFooter">
                             <td>
-                                <div id="footer">
+                                <div id="footer" style="border-top-style: double; border-top-width: medium; border-top-color: #0099FF" >
                                     <p>Copyright (c) 2013 Kraus USA All rights reserved. </p>
                                 </div>
                             </td>
